# ReachFMS

./: .gitignore  addon_config.json
SimConnector/: SimConnector.sln
SimConnector/SimConnector/: ParentWatcher.cs  Program.cs  SimConnectDefinitions.cs  SimConnector.csproj  SimLogger.cs  SocketCom.cs  WasmConnect.cs  WasmModuleClient.cs
flightsim_assets/: description.txt
frontend/: .env.development  .env.production  config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api_handler.js  config_handler.js  decodeKeyBoardAction.js  index.css
frontend/src/components/: CalibrationComponent.js  loadingComponent.js  lowerEcam.js  mcdu.js  mcduSideToggleSwitch.js  selectFMS.js  settings.js  tick.js
main-app/: Cargo.toml  build.rs  tiff.min.js
main-app/data/: config.json
main-app/src/: addon_config.rs  api_communicator.rs  comm_sender.rs  config_handler.rs  debug_logger.rs  http_streamer.rs  image_process.rs  main.rs  mobiflight_installer.rs
svg/export/: edit.txt
