[[bin]]
name = "a320_remote_mcdu"
path = "src/main.rs"

[package]
name = "a320_remote_mcdu"
version = "0.1.6"
edition = "2021"
build = "build.rs"
authors = ["kisbAlt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.3"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
win-screenshot = "4.0.0"
regex = "1.7.1"
image = "0.25.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
qstring = "0.7.2"
local-ip-address = "0.6.1"
qrcode-generator = "4.1.9"
tar = "0.4"
template-matching = { version = "0.2.0", features = ["image"] }
simconnect-sys = "0.24.3"

png = "0.17.13"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
