[[bin]]
name = "reachfms"
path = "src/main.rs"

[package]
name = "reachfms"
version = "0.1.6"
edition = "2021"
build = "build.rs"
authors = ["kisbAlt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.4.32"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
win-screenshot = "4.0.11"
regex = "1.10.5"
image = "0.25.1"
actix-web = "4.8.0"
actix-cors = "0.7.0"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
qstring = "0.7.2"
local-ip-address = "0.6.1"
qrcode-generator = "4.1.9"
tar = "0.4.41"
actix-web-actors = "4.3.0"
actix = "0.13.5"
crossbeam-channel = "0.5.13"
actix-files = "0.6.6"
chrono = "0.4.38"

png = "0.17.13"
zip = "2.1.3"

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
